# ros_project_generator

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
src/ros_project_creator/: __init__.py  cli.py  colorizedlogs.py  create_ros_project.py  create_vscode_project.py  docker_platform.py  resource_installer.py  ros_project_creator.py  ros_variant.py  utilities.py  vscode_project_creator.py
src/ros_project_creator/resources/: README.j2
src/ros_project_creator/resources/clang/: dot_clang-tidy
src/ros_project_creator/resources/docker/: Dockerfile.j2  build.j2  docker-compose.j2  dot_dockerignore  entrypoint.sh  environment_root.sh
src/ros_project_creator/resources/git/: dot_gitignore  dot_pre-commit-config.yaml
src/ros_project_creator/resources/git/gitlab/issue_templates/: bug_report.md  discussion.md  enhancement.md  feature_request.md
src/ros_project_creator/resources/git/gitlab/merge_request_templates/: merge_request.md
src/ros_project_creator/resources/ros/: bringup_CMakeLists_ros1.j2  bringup_CMakeLists_ros2.j2  bringup_package_ros1.xml  catkin_config_ros1.yaml  colcon_mixin_metadata.sh  env_vars_ros1.txt  env_vars_ros2.j2  environment_ros1.j2  environment_ros2.j2  install_ros.j2  packages_ros1.txt  packages_ros2.txt  ros1build.sh  ros2build.sh  ros_variants.yaml  rosdep_ignored_keys_ros2.yaml  rosdep_init_update_install.sh  simulation_CMakeLists_ros1.j2  simulation_CMakeLists_ros2.j2  simulation_package_ros1.xml  simulation_package_ros2.xml
src/ros_project_creator/resources/scripts/: deduplicate_path.sh  dot_bash_aliases  install_base_system.sh  install_default_mesa_packages.sh  install_kisak_mesa_packages.sh  install_locked_mesa_packages_example.sh  install_oibaf_mesa_packages.sh  save_insalled_mesa_locked_packages.sh
src/ros_project_creator/resources/vscode/: c_cpp_properties.j2  docker-compose.j2  dot_devcontainer.j2  ros1.tasks.json  ros2.tasks.json  tasks.j2  ws.j2
src/ros_project_generator/: __init__.py  cli.py  create_ros_project.py  create_vscode_project.py  logging_utils.py  resource_installer.py  ros_project_generator.py  ros_variant.py  vscode_project_creator.py
src/ros_project_generator/resources/: pyproject.toml
src/ros_project_generator/resources/clang/: dot_clang-tidy
src/ros_project_generator/resources/git/: dot_pre-commit-config.yaml
src/ros_project_generator/resources/git/gitlab/issue_templates/: bug_report.md  discussion.md  feature_request.md
src/ros_project_generator/resources/git/gitlab/merge_request_templates/: merge_request.md
src/ros_project_generator/resources/ros/: bringup_package_ros2.xml  ros_variants.yaml
src/ros_project_generator/resources/vscode/: c_cpp_properties.j2  devcontainer.json.j2  docker-compose.yaml.j2  tasks.json.j2  ws.code-workspace.j2  ws.j2
tests/: test_resource_installer.py  test_ros_project_creator.py
